<resources>
    <string name="app_name">GitHub Repos</string>
    <string name="search">Search</string>
    <string name="name">Name:</string>
    <string name="desc">Description:</string>
    <string name="default_branch">Default branch:</string>
    <string name="forks">Forks</string>
    <string name="open_issues">Open Issues</string>
    <string name="watchers">Watchers</string>
    <string name="size">Size</string>
    <string name="owner">Owner</string>
    <string name="url">URL</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="search_repos">Search Repos</string>
    <string name="success_login">Successfully logged in</string>
    <string name="success_load_profile">Successfully load profile</string>
    <string name="repo_validation_message">Please write repo name...</string>
    <string name="no_repo">No repo with that name:</string>

    <string name="public_repos">public repos:</string>
    <string name="public_gists">public gists:</string>
    <string name="followers">followers:</string>
    <string name="following">following:</string>
    <string name="created_at">created at:</string>
    <string name="updated_at">last update:</string>
    <string name="id">ID/</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="report_bug">Report bug</string>
    <string name="my_repos">My repos</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="login_first">Please login first</string>
    <string name="logout">Logout</string>
</resources>
