<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.example.mina.githubrepos.ui.activities.ProfileActivity">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profile_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_bug_report_black_24dp"
            app:riv_border_color="@color/color_1"
            app:riv_border_width="2dp"
            app:riv_corner_radius="10dp" />

        <TextView
            android:id="@+id/bio_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_1"/>

        <TextView
            android:id="@+id/login_name_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/id_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/url_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/html_url_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/name_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/public_repos_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_repos" />

        <TextView
            android:id="@+id/public_gists_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_gists" />

        <TextView
            android:id="@+id/followers_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers" />

        <TextView
            android:id="@+id/following_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following" />

        <TextView
            android:id="@+id/created_at_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at" />

        <TextView
            android:id="@+id/updated_at_text_view"
            style="@style/TextViewProfileTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated_at" />


    </LinearLayout>
</ScrollView>