<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mina.githubrepos.ui.activities.RepoDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp">

        <TextView
            android:id="@+id/name_key"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_value"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintLeft_toRightOf="@+id/name_key"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc_key"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_key" />

        <TextView
            android:id="@+id/desc_value"
            style="@style/TextViewTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            app:layout_constraintLeft_toRightOf="@+id/desc_key"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_key" />


        <TextView
            android:id="@+id/default_branch_key"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_branch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_value" />

        <TextView
            android:id="@+id/default_branch_value"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_branch"
            app:layout_constraintLeft_toRightOf="@+id/default_branch_key"
            app:layout_constraintTop_toBottomOf="@+id/desc_value" />


        <TextView
            android:id="@+id/forks_key"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_1"
            android:text="@string/forks"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/open_issues_key"
            app:layout_constraintTop_toBottomOf="@+id/default_branch_key" />

        <TextView
            android:id="@+id/open_issues_key"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_5"
            android:text="@string/open_issues"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/forks_key"
            app:layout_constraintRight_toLeftOf="@+id/watchers_key"
            app:layout_constraintTop_toBottomOf="@+id/default_branch_key" />

        <TextView
            android:id="@+id/watchers_key"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_3"
            android:text="@string/watchers"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/open_issues_key"
            app:layout_constraintRight_toLeftOf="@+id/size_key"
            app:layout_constraintTop_toBottomOf="@+id/default_branch_key" />

        <TextView
            android:id="@+id/size_key"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_4"
            android:text="@string/size"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/watchers_key"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/default_branch_key" />


        <TextView
            android:id="@+id/owner_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/owner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forks_key" />


        <ImageView
            android:id="@+id/owner_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_key" />

        <TextView
            android:id="@+id/url_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/url"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_avatar" />

        <TextView
            android:id="@+id/url_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url_key" />


        <ImageView
            android:id="@+id/bug_image_view"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_bug_report_black_24dp"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url_value" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>